--- a/animation/animation.html
+++ b/animation/animation.html
@@ -13,6 +13,6 @@
 
  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<marquee style="position:center" direction="right"><img src="giphy.gif" width="15%"/></marquee>
+<marquee direction="right"><img src="giphy.gif" width="15%"/></marquee>
 </body>
 </html>
